--- a/views/ui/config/config.json
+++ b/views/ui/config/config.json
@@ -1,12 +1,11 @@
 {
-    "css": [],
-    "js": [],
+    "css": ["global/1.0.0/global.css"],
+    "js": ["common/1.0.0/common.js"],
     "head": "theme/default",
     "foot": "theme/default",
     "vars": {
-        "title": "Spider 前端本地开发脚手架",
+        "title": "智能燃气管理系统",
         "charset": "UTF-8",
-        "contentType": "text/html",
-        "logo": "/images/spider.png"
+        "contentType": "text/html"
     }
 }
