--- a/views/ui/home/config.json
+++ b/views/ui/home/config.json
@@ -3,7 +3,7 @@
         "css": [],
         "js": [],
         "vars": {
-            "title": "首页"
+            "title": "用气量报表"
         }
     },
     "page": {
