--- a/views/ui/home/config.json
+++ b/views/ui/home/config.json
@@ -19,6 +19,11 @@
             "vars": {
 
             }
+        },
+        "tab": {
+            "vars": {
+                "layout": "null"
+            }
         }
     }
 }
