--- a/views/ui/config/config.json
+++ b/views/ui/config/config.json
@@ -1,10 +1,7 @@
 {
-    "css": ["jquery-ui/1.4.2/themes/gray/easyui.css",
-        "jquery-ui/1.4.2/themes/icon.css",
+    "css": [
         "global/1.0.0/global.css"],
-    "js": ["jquery-ui/1.4.2/easyloader.js",
-        "jquery-ui/1.4.2/jquery.easyui.min.js",
-        "jquery-ui/1.4.2/locale/easyui-lang-zh_CN.js",
+    "js": [
         "common/1.0.0/common.js"],
     "head": "theme/default",
     "foot": "theme/default",
