--- a/views/ui/config/config.json
+++ b/views/ui/config/config.json
@@ -1,8 +1,6 @@
 {
-    "css": [
-        "global/1.0.0/global.css"],
-    "js": [
-        "common/1.0.0/common.js"],
+    "css": ["global/1.0.0/global.css"],
+    "js": [],
     "head": "theme/default",
     "foot": "theme/default",
     "vars": {
