--- a/views/ui/home/config.json
+++ b/views/ui/home/config.json
@@ -1,7 +1,7 @@
 {
     "default": {
         "css": [],
-        "js": [],
+        "js": ["common/1.0.0/common.js"],
         "vars": {
         }
     },
