--- a/views/ui/report/config.json
+++ b/views/ui/report/config.json
@@ -2,7 +2,7 @@
     "default": {
         "css": [
             "frame/1.0.0/frame.css",
-            "jquery-ui/1.4.2/themes/gray/easyui.css",
+            "jquery-ui/1.4.2/themes/default/easyui.css",
             "jquery-ui/1.4.2/themes/icon.css"
         ],
         "js": [
